--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
-Imports:
+Imports: 
     data.table
 LazyData: TRUE
 RoxygenNote: 5.0.1
+Suggests: testthat
